<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GestionarLibroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/str_gestionlibros"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#3F51B5"
        />
    <!--Titulo-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_titulo"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_txttitulo"
        android:hint="@string/str_digitetitulo"
        android:inputType="text"
        />

    <!--SubTitulo-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_subtitulo"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_txtsubtitulo"
        android:inputType="text"
        />

    <!--ISBN-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_isbn"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_txtisbn"
        android:inputType="text"
        />

    <!--Autor-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_autor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_txtautor"
        android:inputType="text"
        />

    <!--Año Publicación-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_anio_publicacion"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_txtaniopublicacion"
        android:inputType="text"
        />

    <!--Precio-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_precio"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_txtprecio"
        android:inputType="text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp"
        >
        <!--Guardar-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ges_btnguardar"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_btnguardar"
            android:onClick="onClick"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorButtonTextColor"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="10sp"/>

        <!--Actualizar-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ges_btnactualizar"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_btnactualizar"
            android:onClick="onClick"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorButtonTextColor"
            android:layout_marginBottom="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"/>

        <!--Borrar-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ges_btnborrar"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_btnborrar"
            android:onClick="onClick"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorButtonTextColor"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="20sp"/>
    </LinearLayout>



</LinearLayout>