<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/str_tituloManetendor"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        />
    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:src="@drawable/libros"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="10sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnregistrar"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_btnregistrar"
        android:onClick="onClick"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorButtonTextColor"
        android:layout_marginBottom="10sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnbuscar"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_btnbuscar"
        android:onClick="onClick"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorButtonTextColor"
        android:layout_marginBottom="10sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnlistar"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_btnListar"
        android:onClick="onClick"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorButtonTextColor" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/txtUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_ubicación"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

</LinearLayout>